--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}
+\cvsection{教育经历}
 
 
 %-------------------------------------------------------------------------------
@@ -11,15 +11,29 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - PRESENT} % Date(s)
+    {信息对抗技术专业学士} % Degree
+    {北京理工大学} % Institution
+    {北京} % Location
+    {2012.9 - 2015.6} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {因为专业的特殊性, 修完了所有计算机专业和信息专业的课程}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
+  \cventry
+    {武器类} % Degree
+    {北京理工大学} % Institution
+    {北京} % Location
+    {2011.9 - 2012.9} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {获得国家励志奖学金}
+      \end{cvitems}
+    }
+
+
+%---------------------------------------------------------
+
 \end{cventries}
