--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Experience}
+\cvsection{工作经历}
 
 
 %-------------------------------------------------------------------------------
@@ -11,83 +11,32 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Exp. Apr. 2016} % Date(s)
+    {系统研发工程师} % Job title
+    {多盟, 效果广告事业部} % Organization
+    {北京} % Location
+    {2014年10月 - 现在} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-        \item {Improved functionality on military command and control system for incident response with Java Servlet.}
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
+        \item {夺宝吧项目的服务端技术负责人。(主导了整个server端系统设计, 研发等的各个过程)}
+        \item {每日锁屏项目服务端技术负责人。(从项目研发的一开始就投入进来, 到后来成为该条产品线的服务端负责人)}
+        \item {参与多盟安卓积分墙产品线的维护与开发，出涩完成了包括了数据统计, 广告检索, 用户信息维护等工作}
+        \item {全栈开发3条产品线的运营管理后台}
+        \item {涉及技术: Golang, PhpYiiFramework, bootstrap3, vue, thri architecture, django, celery, storm, mysql, nosql(redis,sequiadb), hive等}
+        \item {公司荣誉: 突飞猛进奖得主, 多盟季度之星, 多盟年度最佳新人, 多次获得S绩效}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
+    {Python 工程师(实习)} % Job title
+    {加意新品, 技术部} % Organization
+    {北京} % Location
+    {2014年3月 - 2014年8月} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market. Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic, designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
+      \item {做为加意当时唯一的一个server端工程师基于django和开源项目django-oscar完成加意电商第一个完整版本的开发}
+      \item {涉及技术: django, django-oscar, mysql}
       \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Researcher for <Detecting video’s torrents using image similarity algorithms>} % Job title
-    {Undergraduate Research, Computer Vision Lab(Prof. Bohyung Han)} % Organization
-    {Pohang, S.Korea} % Location
-    {Sep. 2012 - Feb. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched means of retrieving a corresponding video based on image contents using image similarity algorithm.}
-        \item {Implemented prototype that users can obtain torrent magnet links of corresponding video relevant to an image on web site.}
-      \end{cvitems} 
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer Trainee} % Job title
-    {Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
-    {Seoul, S.Korea} % Location
-    {Jul. 2012 - Jun. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp. (Start-up company)} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
     }
 
 %---------------------------------------------------------
