--- a/examples/cv/extracurricular.tex
+++ b/examples/cv/extracurricular.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Extracurricular Activity}
+\cvsection{其他经历}
 
 
 %-------------------------------------------------------------------------------
@@ -11,71 +11,44 @@
 
 %---------------------------------------------------------
   \cventry
-    {Core Member} % Affiliation/role
-    {B10S (B1t 0n the Security, Underground hacker team)} % Organization/group
-    {S.Korea} % Location
-    {Nov. 2011 - PRESENT} % Date(s)
+    {个人项目} % Affiliation/role
+    {\href{https://github.com/DrWrong/monica}{Monica}} % Organization/group
+    {} % Location
+    {2016年3月} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in penetration testing areas, especially targeted on web application and software.}
-        \item {Participated on a lot of hacking competition and won a good award.}
-        \item {Held several hacking competitions non-profit, just for fun.}
+      \item {一个旨在提高开发效率, 适用于RESTFUL的golang框架}
+      \item {项目在夺宝吧开发中得到了很好的运用很大程度的提高了生产效率}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Member} % Affiliation/role
-    {WiseGuys (Hacking \& Security research group)} % Organization/group
-    {S.Korea} % Location
-    {Jun. 2012 - PRESENT} % Date(s)
+    {个人项目} % Affiliation/role
+    {\href{https://github.com/DrWrong/code_snap}{CodeSnap}} % Organization/group
+    {} % Location
+    {2015年5月} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in hardware hacking areas from penetration testing on several devices including wireless router, smartphone, CCTV and set-top box.}
-        \item {Trained wannabe hacker about hacking technique from basic to advanced and ethics for white hackers by hosting annual Hacking Camp.}
+        \item {效率工具: 解决在开发过程中创建新项目需要复制粘贴的痛点, 一条命令搞定项目创建}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Core Member \& President at 2013} % Affiliation/role
-    {PoApper (Developers' Network of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Jun. 2010 - PRESENT} % Date(s)
+    {核心成员} % Affiliation/role
+    {ISCC(北京理工大学信息安全对抗赛) 组委会} % Organization/group
+    {北京} % Location
+    {2012.10 - 2015.6} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
+      \item {伴随着整个大学经历, 对网络安全 二进制安全均有比较深入的了解与学习}
+        \item {基于Vmware开发出线下赛环境自动部署系统，相当于是一次运维开发的尝试，该系统后来被openstack取代}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
-  \cventry
-    {Member} % Affiliation/role
-    {PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Sep. 2010 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-        \item {Participated on several hacking competition and won a good award.}
-        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-        \item {Conducted penetration testing commissioned by national agency and corporation.}
-      \end{cvitems}
-    }
 
 %---------------------------------------------------------
-  \cventry
-    {Member} % Affiliation/role
-    {MSSA (Management Strategy Club of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Sep. 2013 - PRESENT} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained knowledge about several business field like Management, Strategy, Financial and marketing from group study.}
-        \item {Gained expertise in business strategy areas and inisght for various industry from weekly industry analysis session.}
-      \end{cvitems}
-    }
-
 %---------------------------------------------------------
 \end{cventries}
