--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvsection{专业技能}
 
 
 %-------------------------------------------------------------------------------
@@ -11,18 +11,33 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {Python, C/C++, Scala, JAVA, Node.JS, OCaml, LaTeX} % Skills
+    {编程语言} % Category
+    {精通Golang, Python, Php 了解Java, Ruby} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Web} % Category
-    {Django with Python, Express with Node.JS, HTML5, LESS} % Skills
-
+    {Web相关} % Category
+    {了解常见的web框架如beego, django, rails, yii. 了解Vue, bootstrap等前端框架} % Skills
 %---------------------------------------------------------
   \cvskill
+    {数据库} % Category
+    {深入理解Mysql, 熟练使用redis} % Skills
+%---------------------------------------------------------
+
+  \cvskill
+    {BigData} % Category
+    {熟悉Hive, Hadoop, Storm, Kafka} % Skills
+
+%---------------------------------------------------------
+
+  \cvskill
+    {系统} % Category
+    {熟悉Linux系统, 了解Docker puppet 等技术} % Skills
+%---------------------------------------------------------
+
+    \cvskill
     {Languages} % Category
-    {Korean, English, Japanese, Chinese} % Skills
+    {Chinese, English} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
